--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,33 +1,33 @@
 :root {
-  --oui-font-family: 'Manrope', sans-serif;
+  --oui-font-family: 'Satoshi', 'Inter Tight', 'Helvetica Neue', Arial, sans-serif;
   --oui-font-size-base: 16px;
 
   /* colors */
-  --oui-color-primary: 176 132 233;
-  --oui-color-primary-light: 213 190 244;
-  --oui-color-primary-darken: 137 76 209;
-  --oui-color-primary-contrast: 255 255 255;
+  --oui-color-primary: 242 201 60;
+  --oui-color-primary-light: 0 255 0;
+  --oui-color-primary-darken: 255 255 255;
+  --oui-color-primary-contrast: 25 13 28;
 
-  --oui-color-link: 189 107 237;
-  --oui-color-link-light: 217 152 250;
+  --oui-color-link: 3 255 0;
+  --oui-color-link-light: 77 250 22;
 
   --oui-color-secondary: 255 255 255;
   --oui-color-tertiary: 218 218 218;
   --oui-color-quaternary: 218 218 218;
 
-  --oui-color-danger: 245 97 139;
-  --oui-color-danger-light: 250 167 188;
-  --oui-color-danger-darken: 237 72 122;
+  --oui-color-danger: 230 46 26;
+  --oui-color-danger-light: 230 46 26;
+  --oui-color-danger-darken: 230 46 26;
   --oui-color-danger-contrast: 255 255 255;
 
-  --oui-color-success: 41 233 169;
-  --oui-color-success-light: 101 240 194;
-  --oui-color-success-darken: 0 161 120;
+  --oui-color-success: 17 157 88;
+  --oui-color-success-light: 17 157 88;
+  --oui-color-success-darken: 15 157 88;
   --oui-color-success-contrast: 255 255 255;
 
   --oui-color-warning: 255 209 70;
   --oui-color-warning-light: 255 229 133;
-  --oui-color-warning-darken: 255 152 0;
+  --oui-color-warning-darken: 230 46 26;
   --oui-color-warning-contrast: 255 255 255;
 
   --oui-color-fill: 36 32 47;
@@ -47,17 +47,17 @@
   --oui-color-base-foreground: 255 255 255;
   --oui-color-line: 255 255 255;
 
-  --oui-color-trading-loss: 245 97 139;
+  --oui-color-trading-loss: 230 46 27;
   --oui-color-trading-loss-contrast: 255 255 255;
-  --oui-color-trading-profit: 41 233 169;
+  --oui-color-trading-profit: 3 255 0;
   --oui-color-trading-profit-contrast: 255 255 255;
 
   /* gradients */
   --oui-gradient-primary-start: 40 0 97;
   --oui-gradient-primary-end: 189 107 237;
 
-  --oui-gradient-secondary-start: 81 42 121;
-  --oui-gradient-secondary-end: 176 132 233;
+  --oui-gradient-secondary-start: 0 255 0;
+  --oui-gradient-secondary-end: 0 255 0;
 
   --oui-gradient-success-start: 1 83 68;
   --oui-gradient-success-end: 41 223 169;
@@ -65,8 +65,8 @@
   --oui-gradient-danger-start: 153 24 76;
   --oui-gradient-danger-end: 245 97 139;
 
-  --oui-gradient-brand-start: 231 219 249;
-  --oui-gradient-brand-end: 159 107 225;
+  --oui-gradient-brand-start: 0 255 0;
+  --oui-gradient-brand-end: 10 10 10;
   --oui-gradient-brand-stop-start: 6.62%;
   --oui-gradient-brand-stop-end: 86.5%;
   --oui-gradient-brand-angle: 17.44deg;
@@ -95,6 +95,6 @@
 }
 
 html, body {
-  font-family: 'Manrope', sans-serif !important;
+  font-family: 'Satoshi', 'Inter Tight', 'Helvetica Neue', Arial, sans-serif !important;
   font-size: 16px !important;
 }
